--- a/index.html
+++ b/index.html
@@ -4,8 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section>
+
+        <nav>
+            <img class="logo" src="./assets/FES.svg" alt="">
+            <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#discord">Discord</a></li>
+            <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <header>
+            <div class="row">
+                <div>
+                    <h1>Best place to learn frontend</h1>
+                    <p class="subheader">Go from being an absolute beginner to pro with a simplified</p>
+                    <button>Start now</button>
+                </div>
+                <figure>
+                    <img src="./assets/laptop.png" alt="Home page image">
+                </figure>
+            </div>
+        </header>
+    </section>
+
+    <section id="about" >
+        <h2>About</h2>
+        <div class="section__description row">
+            <div class="section__description--wrapper">
+                <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam inventore ullam eaque laboriosam reiciendis saepe vitae, molestias nobis harum omnis impedit modi est rem, veritatis quam officia praesentium non at!</p>
+                <p class="section__description--para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, aliquam velit! Repudiandae doloribus facere beatae ullam! Non nesciunt quas ducimus aperiam necessitatibus est quod ipsa magni! Eos porro natus neque!</p>
+            </div>
+            <figure class="about__img--wrapper">
+                <img src="./assets/about.jpg" alt="About image">
+            </figure>
+        </div>
+    </section>
+
+    <section id="discord">
+            <h2>Discord</h2>
+                <div class="section__description row">    
+                    <figure  id="Clyde" class="about__img--wrapper">
+                        <img src="./assets/discord.png" alt="Discord">
+                    </figure>
+                    <div>
+                        <p class="section__description--para">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Susci
+                        reiciendis quasi mollitia placeat dolorum, provident aspernatur
+                        voluptatum! Provident, pariatur eaque.
+                        </p>
+                        <p class="section__description--para">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae
+                        earum labore quaerat quae ad provident nam neque repellendus hj
+                        </p>
+                    </div>
+                </div>
+    </section>
+
     
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <form action="">
+            <span>Email</span>
+            <input type="email" placeholder="jane@example.com">
+            <span>Message</span>
+            <textarea type="text" placeholder="Lets get connected"></textarea>
+            <button>Contact Us!!</button>
+        </form>
+    </section>
+
+    <footer>
+        <img class="footer__logo" src="./assets/FES.svg" alt="">
+        <div class="footer__links">
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#discord">Discord</a>
+            <a class="footer__link" href="#contact">Contact</a>
+            <a class="footer__link" href="">Courses</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+    </footer>
 </body>
+
 </html>
